# thagarat

./: Cargo.toml  README.md
assets/innoSetup/: thagarat-installer.iss
assets/linux_deb_package/: thagarat_linux_amd64.deb
assets/linux_deb_package/thagarat_linux_amd64/DEBIAN/: control
src/: cve.rs  fetch.rs  helper_functions.rs  lib.rs  main.rs
