[package]
name = "thagarat"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
regex = { version = "1.11.1" }
cli-table = { version = "0.4.9" }